implement ReportUtility and tweaks to all reports

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -13,3 +13,8 @@ services:
 
   Angle\AuditBundle\Command\:
     resource: '../../Command/'
+
+
+  Angle\AuditBundle\Command\Audit\DatabaseMigrationsCommand:
+    arguments:
+      $storageConfiguration: '@doctrine.migrations.storage.table_storage'
