--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "symfony/dependency-injection": "^5.4",
     "symfony/framework-bundle": "^5.4",
     "doctrine/doctrine-bundle": "^2.8",
+    "doctrine/doctrine-migrations-bundle": "^3.2.4",
     "symfony/swiftmailer-bundle": "^3.1",
     "doctrine/orm": "^2.14"
   },
