--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   ],
   "require": {
     "php": ">=8.1",
+    "anglemx/php-utilities": "^1.0",
     "symfony/dependency-injection": "^5.4",
     "symfony/framework-bundle": "^5.4",
     "doctrine/doctrine-bundle": "^2.8",
