inject MAILER_FROM envvar

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -18,3 +18,7 @@ services:
   Angle\AuditBundle\Command\Audit\DatabaseMigrationsCommand:
     arguments:
       $storageConfiguration: '@doctrine.migrations.storage.table_storage'
+
+  Angle\AuditBundle\Command\AuditEmailReportCommand:
+    arguments:
+      $mailerForm: '%env(MAILER_FROM)%'
