typo in env variable injection name

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -21,4 +21,4 @@ services:
 
   Angle\AuditBundle\Command\AuditEmailReportCommand:
     arguments:
-      $mailerForm: '%env(MAILER_FROM)%'
+      $mailerFrom: '%env(MAILER_FROM)%'
